# scoreboard

./: README.md  index.html  pyproject.toml
js/: app.348612b3.js  app.348612b3.js.map  chunk-vendors.e45e898a.js  chunk-vendors.e45e898a.js.map
scoreboard/: Procfile  db.sqlite3  requirements.txt
scoreboard/prototype/: models.py  serializers.py  urls.py  views.py
scoreboard/prototype/migrations/: 0001_initial.py  0002_remove_task_description_remove_taskgroup_description.py  0003_alter_task_group.py  0004_alter_usertask_task.py
scoreboard/scoreboard/: asgi.py  settings.py  urls.py  wsgi.py
scoreboard_client/: README.md  package-lock.json  package.json  vue.config.js
scoreboard_client/src/: App.vue  main.js
scoreboard_client/src/components/: GroupsList.vue
